--- a/css/styles.css
+++ b/css/styles.css
@@ -414,29 +414,122 @@ img {
   letter-spacing: -0.04em;
 }
 
-/* @media screen and (min-width: 375px) {
-    .container {
-        max-width: 375px;
-    }
+/* ------------------Call----------------- */
+
+.we-will-call-you {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 40px;
+  background: var(--main-background-color);
+  margin: 0 auto;
+  width: 100%;
+  padding: 80px 20px;
+}
+.section-form-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
 }
 
-@media screen and (min-width: 768px) {
-    .container {
-        max-width: 768px;
-    } */
+.title-text {
+  color: var(--main-text-color);
+  text-align: center;
+  text-shadow: 0 4px 70px rgba(0, 0, 0, 0.1);
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 1.16;
+  letter-spacing: -0.96px;
+  text-transform: uppercase;
+  padding: 0 6px;
+}
+
+.paragraph-text {
+  color: var(--main-text-color);
+  text-align: center;
+  text-shadow: 0 4px 70px rgba(0, 0, 0, 0.1);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.28;
+  letter-spacing: -0.56px;
+  padding: 0 7px;
+}
+
+.form-recall {
+  width: 100%;
+  border-radius: 100px;
+  border: 1px solid #cac8c8;
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+  padding-left: 24px;
+}
+
+.recall {
+  color: #c1bdbd;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.28;
+  letter-spacing: -0.56px;
+}
+
+.button-recall {
+  display: inline-flex;
+  padding: 15px 35px;
+  align-items: center;
+  border-radius: 100px;
+  background: var(--main-button-color);
+  border: none;
+}
+
+.text-button-recall {
+  color: var(--main-background-color);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.28;
+  letter-spacing: -0.56px;
+  text-transform: capitalize;
+}
+
+.recall {
+  border: none;
+}
+
+.img-women-positione {
+  display: flex;
+  top: 60px;
+  left: 62px;
+  right: 62px;
+  bottom: 60px;
+  background: #faf3e7;
+  background-image: radial-gradient(
+    circle at 31px 5.3px,
+    rgba(161, 196, 135, 0.2) 2.5px,
+    transparent 0
+  );
+  background-size: 48px 48px;
+  padding-top: 31px;
+  padding-bottom: 0px;
+  border-radius: 40px;
+}
 
 @media screen and (min-width: 375px) {
   .header-container,
-  .broccoli-section {
+  .broccoli-section,
+  .we-will-call-you {
     max-width: 375px;
   }
 }
-
 /* --------------------------TABLET-------------------------- */
 
 @media screen and (min-width: 768px) {
   .header-container,
-  .broccoli-section {
+  .broccoli-section,
+  .we-will-call-you {
     max-width: 768px;
     padding: 13px 32px;
   }
@@ -507,12 +600,45 @@ img {
     line-height: 1.33;
     width: 279px;
   }
+
+  /* ------------------Call----------------- */
+
+  .we-will-call-you {
+    gap: unset;
+    padding: 100px 32px 173px 32px;
+  }
+
+  .title-text {
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 1.1;
+    letter-spacing: -0.04px;
+    padding: 0 90px;
+  }
+
+  .paragraph-text {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.33;
+    letter-spacing: -0.04px;
+    padding: 0px 102.5px 20px 102.5px;
+  }
+
+  .form-recall {
+    width: 350px;
+    margin-bottom: 80px;
+  }
+  .img-women-positione {
+    border-radius: 80px;
+  }
 }
+
 /* --------------------------DESKTOP-------------------------- */
 
 @media screen and (min-width: 1280px) {
   .header-container,
-  .broccoli-section {
+  .broccoli-section,
+  .we-will-call-you {
     max-width: 1280px;
   }
   .header-menu {
@@ -520,10 +646,6 @@ img {
     gap: 308px;
   }
   /* --------------------------HOW-------------------------- */
-  /* @media screen and (min-width: 1280px) {
-    .container {
-        max-width: 1280px;
-    } */
 
   .broccoli-section {
     padding: 124px 32px;
@@ -546,4 +668,192 @@ img {
   .section-text-second {
     width: 294px;
   }
+
+  /* ------------------Call----------------- */
+
+  .we-will-call-you {
+    flex-direction: row;
+    gap: 77px;
+    background: var(--main-background-color);
+    margin: 0 auto;
+    width: 100%;
+    padding: 124px 32px;
+  }
+  .section-form-title {
+    align-items: unset;
+    gap: 40px;
+  }
+
+  .title-text {
+    font-size: 48px;
+    line-height: 1.04;
+    letter-spacing: -0.04px;
+    padding: 0;
+    text-align: left;
+  }
+
+  .paragraph-text {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.33;
+    letter-spacing: -0.04px;
+    padding: 0 91px 40px 0;
+    text-align: left;
+  }
+
+  .form-recall {
+    margin-bottom: unset;
+  }
 }
+/* 
+@media (min-width: 768px){
+.section-form-title {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    .title-text{
+        display: flex;
+        width: 524px;
+        flex-direction: column;
+        justify-content: center;
+        color: #141414;
+        text-align: center;
+        text-shadow: 0 4px 70px  rgba(0, 0, 0, 0.10);
+        font-family: DM Sans;
+        font-size: 40px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.1;
+        letter-spacing: -1.6px;
+        text-transform: uppercase;
+    }
+
+
+    .paragraph-text{
+        display: flex;
+         width: 499px;
+        flex-direction: column;
+        justify-content: center;
+        color: #141414;
+        text-align: center;
+        text-shadow: 0 4px 70px  rgba(0, 0, 0, 0.10);
+        font-family: DM Sans;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1.28;
+        letter-spacing: -0.72px;
+    }
+
+   
+
+    .form-recall{
+        width: 350px;
+            height: 48px;
+            flex-shrink: 0;
+    }
+
+.positione-img{
+    display: flex;
+        margin-top: 40px;
+        justify-content: center;
+        
+}
+.img-women-positione{
+width: 704px;
+height: 463px;
+justify-content: center;
+}
+    
+}
+
+@media (min-width: 1024px){
+
+.form-recall{
+    width: 350px;
+        height: 48px;
+        flex-shrink: 0;
+}
+
+
+.we-will-call-you{
+    display: flex;
+        padding-right: 32px;
+        padding-left: 32px;
+        align-items: center;
+        justify-content: space-between;      
+        flex-wrap: nowrap;
+    
+        
+        
+}
+
+
+
+.title-text{
+display: flex;
+    width: 614px;
+    flex-direction: column;
+    justify-content: center;color: #141414;
+        text-shadow: 0 4px 70px  rgba(0, 0, 0, 0.10);
+        font-family: DM Sans;
+        font-size: 48px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.1;
+        letter-spacing: -1.92px;
+        text-transform: uppercase;
+}
+
+.section-form-title {
+    display: flex;
+        width: 614px;
+        margin-left: 32px;
+        padding-right: 77px;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        flex-direction: row;
+}
+
+.paragraph-text{
+    display: flex;
+        width: 523px;
+        flex-direction: column;
+        justify-content: center;
+}
+
+
+.img-women-positione{
+    
+    height: 536px;
+    padding-top: 0;
+    display: flex;
+        top: 60px;
+        left: 62px;
+        right: 62px;
+        bottom: 60px;
+        background: #faf3e7;
+        background-image: radial-gradient(circle at 30px 20px, rgba(207, 207, 194, 0.69) 3px, transparent 0);
+        background-size: 42px 40px;
+       
+        padding-bottom: 0px;
+        border-radius: 60px;
+}
+
+.recall {
+    padding-left: 1px;
+    color: #C1BDBD;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.28;
+    letter-spacing: -0.56px;
+}
+
+
+
+} */
